# Learning-OpenGL

./: .gitignore  OpenGL.sln
OpenGL/: imgui.ini
OpenGL-Linux/: CMakeLists.txt  application.cpp  renderer.cpp  renderer.hpp
OpenGL-Linux/res/: basic.glsl
OpenGL-MSVS/res/shaders/: Basic.shader
OpenGL-MSVS/src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
OpenGL-MSVS/src/test/: Test.h  TestClearColor.cpp
OpenGL/res/shaders/: Basic.shader
OpenGL/src/: Application.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp
OpenGL/src/test/: TestClearColor.h  TestMenu.cpp  TestMenu.h
